tidy/ui/empty.stderr
error[E0002]: type mismatch
   ╭─[empty.src:1:1]
   │
 1 │ fn foo(x: i32) -> i32 { }
   │ ^^^^^^^^^^^^^^^^^^~~╮  
   │                     ╰── expected due to this
   │                     │  
   │                     ╰── expected `i32`, found `@unit`
───╯
